--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 webluxe/.env
+content_site/__pycache__/__init__.cpython-312.pyc
+instructors/__pycache__/__init__.cpython-312.pyc
+instructors/__pycache__/admin.cpython-312.pyc
+content_site/__pycache__/admin.cpython-312.pyc
+content_site/__pycache__/apps.cpython-312.pyc
+content_site/__pycache__/models.cpython-312.pyc
+courses/__pycache__/admin.cpython-312.pyc
+courses/__pycache__/models.cpython-312.pyc
+courses/__pycache__/views.cpython-312.pyc
+instructors/__pycache__/apps.cpython-312.pyc
+instructors/__pycache__/models.cpython-312.pyc
+leads/__pycache__/__init__.cpython-312.pyc
+leads/__pycache__/admin.cpython-312.pyc
+leads/__pycache__/apps.cpython-312.pyc
+leads/__pycache__/models.cpython-312.pyc
+webluxe/__pycache*
+courses/__pycache*
