--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,25 @@ pytube==15.0.0
 sqlparse==0.5.0
 tomlkit==0.12.5
 tzdata==2024.1
+asgiref==3.8.1
+astroid==3.2.2
+colorama==0.4.6
+dill==0.3.8
+Django==5.0.6
+django-ckeditor==6.7.1
+django-js-asset==2.2.0
+et_xmlfile==2.0.0
+isort==5.13.2
+mccabe==0.7.0
+openpyxl==3.1.5
+pillow==10.3.0
+platformdirs==4.2.2
+psycopg2==2.9.9
+pylint==3.2.5
+pylint-django==2.5.5
+pylint-plugin-utils==0.8.2
+python-dotenv==1.0.1
+pytube==15.0.0
+sqlparse==0.5.0
+tomlkit==0.12.5
+tzdata==2024.1
