--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,7 @@ leads/__pycache__/apps.cpython-312.pyc
 leads/__pycache__/models.cpython-312.pyc
 webluxe/__pycache*
 courses/__pycache*
-
+node_modules
+package*
+purge*
 
